Final Version of the Week 2 Assignment.

--- a/week2/index.html
+++ b/week2/index.html
@@ -2,24 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta author= "Angelika Kern">
-<title>Responsive Layout</title>
+<meta lang="en">
+<meta name="author", content="Angelika Kern">
+<title>Responsive Layout: Fighting Styles</title>
 <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-<h1>Fighting Styles <img src="https://pixabay.com/static/uploads/photo/2014/04/03/11/53/karate-312472_960_720.png" height="50px";> </h1>
+<h1>Fighting Styles <img src="https://pixabay.com/static/uploads/photo/2014/04/03/11/53/karate-312472_960_720.png" height="50" alt="Karate-Fighter Clipart"> </h1>
 
 <div class="row">
-  <div data-title="Beef" id="p1" class="col-lg-4 col-md-6 col-sm-12" background-color="#BBFFFF">
-  	<p id="titleregion">Beef</p>
+  <div data-title="Beef" class="col-lg-4 col-md-6 col-sm-12">
+  	<p class="titleregion">Beef</p>
   	<p> Applying the "Beef"-Fighting-Style, your strength is to insult and tease your opponents to draw them of their mind. It is possible to make your strategy up on-the-fly, but good preparation can help, especially for beginners. Useful phrases might be: "Hey, you *******, why are you such a ********?" or "Hey ********, just yesterday, I saw your ********* *********!" or just laughing at them heartily. But be careful! This Fighting-style is usually applied if your opponent is clearly in an inferior position.
   </div>
-  <div data-title="Sushi" id="p1" class="col-lg-4 col-md-6 col-sm-12">
-  	<p id="titleregion"> Sushi </p>
+  <div data-title="Sushi" class="col-lg-4 col-md-6 col-sm-12">
+  	<p class="titleregion"> Sushi </p>
   	<p> When using the "Sushi"-Fighting-Style, you make use of your overpowering Martial Arts skills to make Sushi out of your opponents (not literally, of course). If no specific fighting technique comes to your mind right now, it might be helpful to prepare by researching on some of the following keywords: Roundhouse Kick, One-inch-punch, Groin attack, Manila Ice Punch, Butterfly kick, Tsuki, Iron Palm. Please note that researching in advance can prove advantageous. </p>
   </div>
-  <div data-title="Chicken" id="p1" class="col-lg-4 col-md-12 col-sm-12">
- 	<p id="titleregion">Chicken</p>
+  <div data-title="Chicken" class="col-lg-4 col-md-12 col-sm-12">
+ 	<p class="titleregion">Chicken</p>
   	<p> Well, if you happen to be an expert in the "Chicken"-Fighting-Style: RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN! RUN!</p>
   </div>
 
