--- a/week2/index.html
+++ b/week2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta lang="en">
-<meta name="author", content="Angelika Kern">
+<meta name="author" content="Angelika Kern">
 <title>Responsive Layout: Fighting Styles</title>
 <link rel="stylesheet" href="css/stylesheet.css">
 </head>
