Final Version of the Week 2 Assignment.

--- a/week2/index.html
+++ b/week2/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<meta lang="en">
 <meta name="author" content="Angelika Kern">
 <title>Responsive Layout: Fighting Styles</title>
 <link rel="stylesheet" href="css/stylesheet.css">
