Final Version of Week2 assignment.

--- a/week2/index.html
+++ b/week2/index.html
@@ -12,7 +12,7 @@
 <div class="row">
   <div data-title="Beef" class="col-lg-4 col-md-6 col-sm-12">
   	<p class="titleregion">Beef</p>
-  	<p> Applying the "Beef"-Fighting-Style, your strength is to insult and tease your opponents to draw them of their mind. It is possible to make your strategy up on-the-fly, but good preparation can help, especially for beginners. Useful phrases might be: "Hey, you *******, why are you such a ********?" or "Hey ********, just yesterday, I saw your ********* *********!" or just laughing at them heartily. But be careful! This Fighting-style is usually applied if your opponent is clearly in an inferior position.
+  	<p> Applying the "Beef"-Fighting-Style, your strength is to insult and tease your opponents to draw them of their mind. It is possible to make your strategy up on-the-fly, but good preparation can help, especially for beginners. Useful phrases might be: "Hey, you *******, why are you such a ********?" or "Hey ********, just yesterday, I saw your ********* *********!" or just laughing at them heartily. But be careful! This Fighting-style is usually applied if your opponent is clearly in an inferior position. </p>
   </div>
   <div data-title="Sushi" class="col-lg-4 col-md-6 col-sm-12">
   	<p class="titleregion"> Sushi </p>
